--- a/sponsers.html
+++ b/sponsers.html
@@ -10,7 +10,13 @@
     
     <div class="footer">
         <div class="footer2">
-            <img src="" class="logo">
+            <div class="logo">
+                <div class="images">
+                    <img src="gear.png" alt="">
+                    <img src="logo-white.svg" alt="">
+                </div>
+                <p>THE MOST INNOVATIVE ENTREPRENEURSHIP SUMMIT OF INDIA</p>
+            </div>
             <div class="address">
                 <h3>ADDRESS</h3>
                 <p>E-CELL, IIITG GUWAHATI <br> ASSAM - 781015</p>
